--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,8 @@
         }
     },
     "require-dev": {
+        "phpstan/phpstan": "^1.11",
+        "squizlabs/php_codesniffer": "^3.10",
         "symfony/maker-bundle": "^1.53"
     }
 }
