--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,8 +1,8 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: Person Manager API
-            description: API REST de gestion des personnes
+            title: Article Manager API
+            description: API REST de gestion des articles
             version: 1.0.0
     areas: # to filter documented areas
         path_patterns:
